# docs/swagger.json
@@ -79,70 +79,6 @@
                     }
                 }
             }
-        },
-        "/{organization}/assets/{assetId}": {
-            "get": {
-                "description": "Currently available scripts\n- events-summary - Summarizes daily state event occurences\n- online-summary - Summarizes daily datasource activity",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Assets"
-                ],
-                "summary": "Retrieves script data for asset context",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Unique Script Identifier",
-                        "name": "scriptName",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "default": "1708300800:1708387200",
-                        "description": "Timestamp range in format {startTs}:{endTs}. Timestamps in seconds, tz=UTC",
-                        "name": "ts",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Organization Integer Identifier",
-                        "name": "organization",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "default": "367",
-                        "description": "Comma separated list of Asset IDs",
-                        "name": "assetId",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "example": "motor,motor.Psum",
-                        "description": "(available in events-summary) Comma separated list of events",
-                        "name": "category",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "object",
-                                "additionalProperties": true
-                            }
-                        }
-                    }
-                }
-            }
         }
     },
     "externalDocs": {
